# CPU_Design

./: .gitignore  CMakeLists.txt  README.md  test_memory
.github/workflows/: ci.yaml
datapath/: adders.cpp  adders.h  bitwise.cpp  flags.cpp  flags.h  mux.cpp  mux.h  shifter.cpp  shifter.h
demos/c/: factorial_iter.c  factorial_rec.c  fibonacci_iter.c  fibonacci_rec.c  hello_world.c
demos/cpp/: factorial_iter.cpp  factorial_rec.cpp  fibonacci_iter.cpp  fibonacci_rec.cpp  hello_world.cpp
gates/: gates.cpp  gates.h
memory/: flipflop.cpp  flipflop.h  memory.cpp  memory.h  register.cpp  register.h
tests/: test_gates.cpp
tests/alu/: test_adders.cpp  test_flags.cpp  test_mux.cpp  test_shifter.cpp
tests/memory/: test_flipflop.cpp  test_memory.cpp  test_register.cpp
utils/: utils.cpp  utils.h
